# MinecraftClone

./: .gitignore  CMakeLists.txt  OpenGL.cbp  OpenGL.depend  OpenGL.layout  README.md
glew/: .gitignore
glew/src/: glew.c
glfw/src/: .gitignore  glx_context.c  x11_init.c
res/shaders/: basicFragment.shader  basicVertex.shader  block.shader  blockFragment.shader  blockVertex.shader
res/textures/notUsed/block/: brain_coral_block.xcf  bubble_coral_block.xcf  dead_brain_coral_block.xcf  dead_bubble_coral_block.xcf  dead_fire_coral_block.xcf  dead_horn_coral_block.xcf  dead_tube_coral_block.xcf  fire_coral_block.xcf  horn_coral_block.xcf  stripped_acacia_log.xcf  stripped_acacia_log_top.xcf  stripped_birch_log.xcf  stripped_birch_log_top.xcf  stripped_dark_oak_log.xcf  stripped_dark_oak_log_top.xcf  stripped_jungle_log.xcf  stripped_jungle_log_top.xcf  stripped_oak_log.xcf  stripped_oak_log_top.xcf  stripped_spruce_log.xcf  stripped_spruce_log_top.xcf  tube_coral_block.xcf
res/textures/notUsed/block/documents/: Slice1Block.xcf  blocktemplate.xcf
res/textures/notUsed/blocksHigh/: grass test.pdn
src/: CMakeLists.txt  camera.c  camera.h  cube.c  cube.h  gameState.c  gameState.h  global.h  main.c  mob.c  mob.h  renderer.c  renderer.h  shader.h  texture.c  texture.h  window.c  window.h  world.c  world.h
src/dep/: stb_image.h
src/engine/: indexBuffer.c  indexBuffer.h  program.h  shader.c  shader.h  texture.c  texture.h  utils.c  utils.h  vertexArray.c  vertexArray.h  vertexBuffer.c  vertexBuffer.h
src/noise/: perlin.c  perlin.h
